boehmgc: fix livecheck
git-svn-id: https://svn.macports.org/repository/macports/trunk@73140 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/boehmgc/Portfile
+++ b/dports/devel/boehmgc/Portfile
@@ -38,5 +38,5 @@ test.target	check
 
 livecheck.type  regex
 livecheck.url   ${master_sites}?C=M&O=D
-livecheck.regex ${d_name}-(\\d+(?:\\.\\d+)*)
+livecheck.regex ${d_name}-?(\\d+(?:\\.\\d+)*)${extract.suffix}
 
