--- a/dports/devel/boehmgc/Portfile
+++ b/dports/devel/boehmgc/Portfile
@@ -37,6 +37,6 @@ test.run	yes
 test.target	check
 
 livecheck.type  regex
-livecheck.url   ${master_sites}?C=M&O=D
+livecheck.url   [lindex ${master_sites} 0]
 livecheck.regex ${d_name}-?(\\d+(?:\\.\\d+)*)${extract.suffix}
 
