exiv2: does not work with ccache.
git-svn-id: https://svn.macports.org/repository/macports/trunk@73142 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/exiv2/Portfile
+++ b/dports/graphics/exiv2/Portfile
@@ -19,6 +19,8 @@ checksums        md5     f52fb75a2cb7512f1484deab76473e13 \
 long_description Exiv2 comprises of a C++ library and a command line utility \
                  which allows you to manipulate EXIF and IPTC image metadata.
 
+configure.ccache no
+
 configure.args   --with-libiconv-prefix=${prefix}	\
                  --with-libintl-prefix=${prefix}	\
                  --with-zlib=${prefix}				\
