qtpfsgui: better way to handle arch type(s) and release/debug.
git-svn-id: https://svn.macports.org/repository/macports/trunk@73143 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/aqua/qtpfsgui/Portfile
+++ b/dports/aqua/qtpfsgui/Portfile
@@ -26,16 +26,19 @@ checksums       md5     5a6421391e373c912e4a793e131151c8 \
 
 patchfiles      patch-project.pro.diff
 
-post-patch {
-    # set arch type(s)
-    reinplace "s|@ARCHES@|${qt_arch_types}|g" \
-        ${worksrcpath}/project.pro
+# set arch type(s); done is a stage to make sure the 'options
+# qt_arch_types' is evaluated -after- +universal (if selected).
+pre-configure {
+    configure.pre_args  CONFIG+="${qt_arch_types}"
 }
 
-configure.pre_args  PREFIX="${prefix}"
-configure.args      APPLICATIONS_DIR="${applications_dir}" \
-                    DOCDIR="${prefix}/share/doc/${name}"
-configure.cmd   "LOCALSOFT=${prefix} ${qt_qmake_cmd}"
+configure.args  APPLICATIONS_DIR="${applications_dir}" \
+                DOCDIR="${prefix}/share/doc/${name}" \
+                PREFIX="${prefix}" CONFIG+="release" \
+                LOCALSOFT="${prefix}"
+configure.cmd   ${qt_qmake_cmd}
+configure.post_args
+configure.universal_args
 
 # allow ccache, if specified by the user
 pre-build {
