babl, gegl: update master_sites, livecheck.
git-svn-id: https://svn.macports.org/repository/macports/trunk@73144 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/gegl/Portfile
+++ b/dports/graphics/gegl/Portfile
@@ -10,7 +10,7 @@ categories      graphics
 maintainers     devans
 platforms       darwin
 homepage        http://gegl.org/
-master_sites    gimp:${name}/${branch}
+master_sites    ftp://ftp.gtk.org/pub/${name}/${branch}/
 
 use_bzip2       yes
 
@@ -64,5 +64,5 @@ variant workshop description {Enable build of workshop operations} {
 }
 
 livecheck.type  regex
-livecheck.url   ftp://ftp.gimp.org/pub/${name}/${branch}/
+livecheck.url   [lindex ${master_sites} 0]
 livecheck.regex "${name}-(\\d+(?:\\.\\d+)*)${extract.suffix}"
