--- a/dports/graphics/babl/Portfile
+++ b/dports/graphics/babl/Portfile
@@ -10,7 +10,7 @@ categories      graphics
 maintainers     devans
 platforms       darwin
 homepage        http://gegl.org/babl
-master_sites    gimp:${name}/${branch}
+master_sites    ftp://ftp.gtk.org/pub/${name}/${branch}/
 
 use_bzip2       yes
 
@@ -34,5 +34,5 @@ platform darwin 10 {
 }
 
 livecheck.type  regex
-livecheck.url   ftp://ftp.gimp.org/pub/${name}/${branch}/
+livecheck.url   [lindex ${master_sites} 0]
 livecheck.regex "${name}-(\\d+(?:\\.\\d+)+)"
