phonon: better way to handle setting arch type(s). Rev bump in case +universal was installed recently, to get a true universal install.
git-svn-id: https://svn.macports.org/repository/macports/trunk@73145 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/phonon/Portfile
+++ b/dports/audio/phonon/Portfile
@@ -6,7 +6,7 @@ PortGroup           qt4 1.0
 
 name                phonon
 version             4.4.2
-revision            2
+revision            3
 categories          audio kde kde4
 maintainers         nomaintainer
 description         Cross Platform Multimedia API used by KDE4
@@ -119,26 +119,29 @@ post-patch {
     unset PRIVATE_HEADERS
 }
 
+# set arch type(s); done is a stage to make sure the 'options
+# qt_arch_types' is evaluated -after- +universal (if selected).
+pre-configure {
+    configure.pre_args-append  CONFIG+="${qt_arch_types}"
+}
+
 # set up to use the installed QMake files
 configure.cmd       ${qt_qmake_cmd}
 configure.pre_args  \
-    CONFIG+="phonon phonon-backend ${qt_arch_types}" \
+    CONFIG+="phonon phonon-backend" \
     PHONON_MAJOR_VERSION=${PHONON_MAJOR_VERSION} \
     PHONON_MINOR_VERSION=${PHONON_MINOR_VERSION} \
     PHONON_PATCH_VERSION=${PHONON_PATCH_VERSION} \
     WORKSRCPATH=${worksrcpath} \
     LOCAL_BUILD_TREE=${PHONON_BUILD_DIR}
 configure.args      "-o Makefile phonon.pro"
+configure.universal_args
 
 if {[variant_isset debug]} {
     configure.pre_args-append CONFIG+=debug_and_release
 } else {
     configure.pre_args-append CONFIG+=release
 }
-
-# qmake does not handle these flags flags
-configure.universal_args-delete --disable-dependency-tracking
-configure.args-delete           --disable-dependency-tracking
 
 # allow ccache, if specified by the user
 pre-build {
