gimp: update livecheck.
git-svn-id: https://svn.macports.org/repository/macports/trunk@73146 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/gimp/Portfile
+++ b/dports/graphics/gimp/Portfile
@@ -72,5 +72,5 @@ variant manual description {Include the help files.} {
 variant quartz {}
 
 livecheck.type  regex
-livecheck.url   ftp://ftp.gimp.org/pub/gimp/v${branch}/
+livecheck.url   ftp://ftp.gtk.org/pub/gimp/v${branch}/
 livecheck.regex "gimp-(${branch}(?:\\.\\d+)*)${extract.suffix}"
