gimp2, gimp2-devel: update livecheck.
git-svn-id: https://svn.macports.org/repository/macports/trunk@73147 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/gimp2-devel/Portfile
+++ b/dports/graphics/gimp2-devel/Portfile
@@ -142,5 +142,5 @@ variant no_x11 {
 }
 
 livecheck.type  regex
-livecheck.url   ftp://ftp.gimp.org/pub/gimp/v${branch}/
+livecheck.url   ftp://ftp.gtk.org/pub/gimp/v${branch}/
 livecheck.regex "gimp-(${branch}(?:\\.\\d+)*)${extract.suffix}"
