gimp-gap: update livecheck.
git-svn-id: https://svn.macports.org/repository/macports/trunk@73148 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/gimp-gap/Portfile
+++ b/dports/graphics/gimp-gap/Portfile
@@ -92,5 +92,5 @@ post-destroot {
 }
 
 livecheck.type  regex
-livecheck.url   ftp://ftp.gimp.org/pub/gimp/plug-ins/v${branch}/gap/
+livecheck.url   ftp://ftp.gtk.org/pub/gimp/plug-ins/v${branch}/gap/
 livecheck.regex "${name}-(\\d+(?:\\.\\d+)*)${extract.suffix}"
