gimp-user-manual: update livecheck.
git-svn-id: https://svn.macports.org/repository/macports/trunk@73149 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/gimp-user-manual/Portfile
+++ b/dports/graphics/gimp-user-manual/Portfile
@@ -117,5 +117,5 @@ variant zh_CN description {Build zh_CN locale} {
 }
 
 livecheck.type  regex
-livecheck.url   ftp://ftp.gimp.org/pub/gimp/help/
+livecheck.url   ftp://ftp.gtk.org/pub/gimp/help/
 livecheck.regex "gimp-help-(\\d+(?:\\.\\d+)*)${extract.suffix}"
