--- a/dports/math/libtommath/Portfile
+++ b/dports/math/libtommath/Portfile
@@ -3,21 +3,25 @@
 PortSystem 1.0
 
 name			libtommath
-version			0.40
+version			0.42.0
 categories		math
 platforms		darwin
 maintainers		mww
+license			Public-Domain
+
 description		Comprehensive, modular and portable mathematical routines
 long_description	LibTomMath provides highly optimized and portable routines \
 			for a vast majority of integer based number theoretic \
 			applications (including public key cryptography).
 
-homepage		http://math.libtomcrypt.com/
-master_sites	http://libtom.org/files/ \
-				http://www.atarininja.org/~wxs/distfiles/ \
+homepage		http://www.libtom.org/?page=features&whatfile=ltm
+master_sites	http://www.libtom.org/files/ \
 				freebsd
 distname		ltm-${version}
-checksums		sha1 439899c06444c363eee527f75447d189ee4f93ba
+
+checksums		sha1    9b192701cf62b85e9bd65fbb4d622d04cfa5ee0d \
+				rmd160  9994d60d7e847a066715d8c644ce9b125932bf92
+
 use_bzip2		yes
 patchfiles		patch-makefile
 
@@ -25,7 +29,15 @@ worksrcdir		${name}-${version}
 
 use_configure	no
 
-build.args		LIBDIR=${prefix}/lib
+variant universal {}
+if {[variant_isset universal]} {
+	set archflags ${configure.universal_cflags}
+} else {
+	set archflags ${configure.cc_archflags}
+}
+
+build.args		LIBPATH=${prefix}/lib \
+				CC="${configure.cc} ${archflags}"
 
 destroot {
 	xinstall -m 755 -d ${destroot}${prefix}/include/${name}
@@ -33,12 +45,17 @@ destroot {
 		tommath_superclass.h ${destroot}${prefix}/include/${name}
 	xinstall -m 644 -W ${worksrcpath} libtommath.a libtommath.${version}.dylib \
 		${destroot}${prefix}/lib
-	system "cd ${destroot}${prefix}/lib \
-		&& ln -s libtommath.${version}.dylib libtommath.0.dylib \
-		&& ln -s libtommath.${version}.dylib libtommath.dylib"
+	ln -s libtommath.${version}.dylib ${destroot}${prefix}/lib/libtommath.0.dylib
+	ln -s libtommath.${version}.dylib ${destroot}${prefix}/lib/libtommath.dylib
+	
+	set docdir ${destroot}${prefix}/share/doc/${name}
+	xinstall -d ${docdir}
+	xinstall -m 644 -W ${worksrcpath} \
+		LICENSE \
+		changes.txt \
+		${docdir}
 }
 
-platform darwin 8 {
-	build.args-append	CC=/usr/bin/gcc-4.0
-}
-
+livecheck.type	regex
+livecheck.url	${homepage}
+livecheck.regex	ltm-(\[0-9.\]+)${extract.suffix}
