telepathy-glib: update to version 0.12.3, disable GObject introspection and vala bindings on Tiger to allow build.
git-svn-id: https://svn.macports.org/repository/macports/trunk@73152 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/comms/telepathy-glib/Portfile
+++ b/dports/comms/telepathy-glib/Portfile
@@ -4,7 +4,7 @@
 PortSystem 1.0
 
 name            telepathy-glib
-version         0.12.2
+version         0.12.3
 description     The ${name} component of Telepathy - a Flexible Communications Framework.
 long_description \
                 The ${name} component of Telepathy - a Flexible Communications Framework. \
@@ -18,9 +18,9 @@ platforms       darwin
 homepage        http://telepathy.freedesktop.org/wiki
 master_sites    http://telepathy.freedesktop.org/releases/${name}/
 
-checksums       md5     a9aeb35a08f8139cd63f26ec762a7fa7 \
-                sha1    5082796235d73c814175e3c7c05f3dfb65a0a417 \
-                rmd160  b4dbf3287b446675cda2b98277c8850390b801b9
+checksums       md5     d0cbfbad7c7a5fd272fdb8a1cc159b18 \
+                sha1    30596aa3b98f4cbb22e2e0bed7ac473a91faea86 \
+                rmd160  f3ec11299be4afe7529544a6d125a3987d26431b
 
 depends_build   port:pkgconfig \
                 port:gnome-doc-utils \
@@ -37,6 +37,14 @@ configure.python ${prefix}/bin/python2.6
 
 configure.args  --enable-vala-bindings \
                 --enable-introspection=yes
+
+platform darwin 8 {
+    depends_lib-delete    port:gobject-introspection \
+                          port:vala
+    configure.args-delete --enable-vala-bindings
+    configure.args-delete --enable-introspection=yes
+    configure.args-append --enable-introspection=no
+}
 
 livecheck.type  regex
 livecheck.url   ${master_sites}
