kmymoney4: remove patch for use with older kdepimlibs4
git-svn-id: https://svn.macports.org/repository/macports/trunk@73153 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/kde/kmymoney4/Portfile
+++ b/dports/kde/kmymoney4/Portfile
@@ -8,7 +8,7 @@ PortGroup           kde4    1.1
 
 name                kmymoney4
 version             4.5
-revision            1
+revision            2
 
 categories          kde finance
 maintainers         mk pixilla.com:brad openmaintainer
@@ -43,32 +43,16 @@ pre-fetch {
 "  ============================================== \n \
 This port is still EXPERIMENTAL.               \n \
 ============================================== \n \
-Up to now it builds successfully with KDE 4.5, \n \
-but there is some stuff related to kdepimlibs  \n \
-temporally removed until the latter has been   \n \
-updated to 4.5 as well.                        \n \
----------------------------------------------- \n \
                                                \n \
 So far known problems are:                     \n \
  - oxygen icon theme is not found by the app   \n \
  - reports let the app hang                    \n \
  - some fonts seem to be missing, since        \n \
    layout looks inhomogenious                  \n \
-                                               \n \
-Untested is:                                   \n \
- - whether kmm_banking plugin works            \n \
-   (i.e. transaction download questionble)     \n \
+ - kmm_banking plugin doesn't work             \n \
                                                \n \
 ============================================== \n \
 "
-}
-
-patch.dir           ${workpath}/${distname}
-patch.pre_args      -p1
-
-post-patch {
-   # remove KDE 4.5 holiday stuff until kdepimlibs is up-to-date
-   reinplace "s/KDE_IS_VERSION(4,5,0)/0/g" ${worksrcpath}/kmymoney/kmymoney.cpp
 }
 
 #configure.args-append   --disable-kbanking-plugin
