telepathy-gabble: update to version 0.10.4, livecheck, builds universal.
git-svn-id: https://svn.macports.org/repository/macports/trunk@73158 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/comms/telepathy-gabble/Portfile
+++ b/dports/comms/telepathy-gabble/Portfile
@@ -4,8 +4,8 @@
 PortSystem 1.0
 
 name            telepathy-gabble
-version         0.10.3
-revision        1
+version         0.10.4
+set branch      [join [lrange [split ${version} .] 0 1] .]
 description     The ${name} component of Telepathy - a Flexible Communications Framework
 long_description \
                 Gabble is a Jabber/XMPP connection manager that handles single- and multi-user \
@@ -16,9 +16,9 @@ platforms       darwin
 homepage        http://telepathy.freedesktop.org/wiki/
 master_sites    http://telepathy.freedesktop.org/releases/${name}/
 
-checksums       md5     4aae1249cecb5a99708a1558625fd1ab \
-                sha1    9dbf22ff48fafb243b727a3c22085cc3eea45c0c \
-                rmd160  7a8a7f670bdb8929bf0b8c987c45c7641e9a4724
+checksums       md5     bbf85590ffc6afd5fdc487a6e5d82a0e \
+                sha1    4493fa8d2e537d91cea82a65b11af85406308a8b \
+                rmd160  d991aa9974447f98238a119851da054773239199
 
 depends_build   port:pkgconfig \
                 port:gtk-doc
@@ -36,12 +36,6 @@ configure.python ${prefix}/bin/python2.6
 
 configure.args  --disable-silent-rules
 
-#
-# libnice -> gst-plugins-base -> orc is not universal
-#
-
-universal_variant no
-
 livecheck.type  regex
 livecheck.url   ${master_sites}
-livecheck.regex "${name}-(\\d+(?:\\.\\d+)*)${extract.suffix}"
+livecheck.regex "${name}-(${branch}(?:\\.\\d+)*)${extract.suffix}"
