python/py26-pgsql - add variant for PostGreSQL 9.0, move to 8.4 for the default; ticket #27149
git-svn-id: https://svn.macports.org/repository/macports/trunk@73159 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py26-pgsql/Portfile
+++ b/dports/python/py26-pgsql/Portfile
@@ -35,22 +35,28 @@ post-destroot {
       demo2a.py demo2b.py ${destroot}${prefix}/share/doc/${name}/examples
 }
 
-variant postgresql83 conflicts postgresql84 description {Use with PostgreSQL 8.3} {
+variant postgresql83 conflicts postgresql84 postgresql90 description {Use with PostgreSQL 8.3} {
    global build.env destroot.env
    depends_lib-append   port:postgresql83
    build.env            PATH="${prefix}/lib/postgresql83/bin:$env(PATH)"
    destroot.env         ${build.env}
 }
 
-variant postgresql84 conflicts postgresql83 description {Use with PostgreSQL 8.4} {
+variant postgresql84 conflicts postgresql83 postgresql90 description {Use with PostgreSQL 8.4} {
    global build.env destroot.env
    depends_lib-append   port:postgresql84
    build.env            PATH="${prefix}/lib/postgresql84/bin:$env(PATH)"
    destroot.env         ${build.env}
 }
 
-# Default to postgresql83 since that was the built-in version previously
-if {![variant_isset postgresql83] && ![variant_isset postgresql84]} {
-   default_variants   +postgresql83
+variant postgresql90 conflicts postgresql83 postgresql84 description {Use with PostgreSQL 9.0} {
+   global build.env destroot.env
+   depends_lib-append   port:postgresql90
+   build.env            PATH="${prefix}/lib/postgresql90/bin:$env(PATH)"
+   destroot.env         ${build.env}
+}
+
+if {![variant_isset postgresql83] && ![variant_isset postgresql84] && ![variant_isset postgresql90]} {
+   default_variants   +postgresql84
 }
 
