empathy: update comments, lint.
git-svn-id: https://svn.macports.org/repository/macports/trunk@73161 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/empathy/Portfile
+++ b/dports/gnome/empathy/Portfile
@@ -39,7 +39,7 @@ depends_lib     port:gconf \
                 port:libgnome-keyring \
                 port:libnotify \
                 port:libunique \
-                port:webkit-gtk 
+                port:webkit-gtk
 
 use_bzip2 	yes
 
@@ -54,7 +54,7 @@ configure.args  --mandir=${prefix}/share/man \
 configure.python ${prefix}/bin/python2.6
 
 #
-# telepathy-farsight is not universal
+# telepathy-haze -> pidgin is not universal
 #
 
 universal_variant no
