gst-plugins-good: update comment concerning universal build.
git-svn-id: https://svn.macports.org/repository/macports/trunk@73164 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/gst-plugins-good/Portfile
+++ b/dports/gnome/gst-plugins-good/Portfile
@@ -40,7 +40,7 @@ depends_lib	\
       
 use_bzip2   yes
 
-# gst-plugins-base is not universal
+# gst-plugins-good itself is not universal
 universal_variant   no
 
 pre-configure {
