gst-plugins-bad: update comment concerning universal builds.
git-svn-id: https://svn.macports.org/repository/macports/trunk@73167 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/gst-plugins-bad/Portfile
+++ b/dports/gnome/gst-plugins-bad/Portfile
@@ -77,7 +77,7 @@ post-patch {
         ${worksrcpath}/configure
 }
 
-# gst-plugins-base is not universal
+# gst-plugins-bad itself is not universal
 universal_variant   no
 
 variant dc1394 description {Enable Firewire digital camera support using libdc1394} {
