--- a/dports/gnome/gst-plugins-ugly/Portfile
+++ b/dports/gnome/gst-plugins-ugly/Portfile
@@ -36,7 +36,7 @@ depends_lib         port:gst-plugins-base \
 
 use_bzip2           yes
 
-# gst-plugins-base is not universal
+# libmpeg2 is not universal
 universal_variant   no
 
 configure.args              mandir=${prefix}/share/man --enable-static
