totem: update comments concerning universal builds.
git-svn-id: https://svn.macports.org/repository/macports/trunk@73169 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/totem/Portfile
+++ b/dports/gnome/totem/Portfile
@@ -77,7 +77,9 @@ post-patch {
 }
 
 #
-# gst-plugins-good -> gst-plugins-base -> orc is not universal
+# gst-plugins-good is not universal
+# gst-plugins-bad  is not universal
+# gst-plugins-ugly is not universal
 #
 
 universal_variant no
