PlasmaClient: update homepage
git-svn-id: https://svn.macports.org/repository/macports/trunk@73170 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/PlasmaClient/Portfile
+++ b/dports/games/PlasmaClient/Portfile
@@ -11,7 +11,7 @@ categories                  games
 platforms                   darwin
 maintainers                 ryandesign
 license                     GPL-3+
-homepage                    http://plasmaclient.servegame.org/
+homepage                    http://plasmaclient.info/
 
 description                 open-source Plasma engine
 
