oxygen-icons: this port is only non-executables
git-svn-id: https://svn.macports.org/repository/macports/trunk@73172 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/kde/oxygen-icons/Portfile
+++ b/dports/kde/oxygen-icons/Portfile
@@ -16,6 +16,7 @@ master_sites        kde:stable/${version}/src/
 use_bzip2           yes
 checksums           sha1    e95f7d9cf524f4001c65a9bd6c54357427954971 \
                     rmd160  68dd3a5cd24869a194f1a888c6553b7ad4933c44
+supported_archs     noarch
 
 livecheck.url       http://mirrors.ibiblio.org/pub/mirrors/kde/stable/latest/src/
 livecheck.regex     ${name}-(\\d+\\.\\d+\\.\\d+)${extract.suffix}
