wxMaxima update to 0.8.6 (#26873)
git-svn-id: https://svn.macports.org/repository/macports/trunk@73173 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/math/wxMaxima/Portfile
+++ b/dports/math/wxMaxima/Portfile
@@ -1,7 +1,7 @@
 # $Id$
 PortSystem      1.0
 name            wxMaxima
-version         0.8.4
+version         0.8.6
 maintainers     usami-k
 platforms       darwin
 categories      math aqua
@@ -11,9 +11,9 @@ long_description \
                 system maxima based on wxWidgets.
 homepage        http://wxmaxima.sourceforge.net/
 master_sites    sourceforge:wxmaxima
-checksums           md5     b972743501298932bc0b0796c5489332 \
-                    sha1    d0e9dedafb839305988efae63dd22bd9eabb43f8 \
-                    rmd160  89ff230a628e4957c2f5a48b09ff99166ec9acc9
+checksums           md5     7b5528276fc37ddca2cbab7c75fe6280 \
+                    sha1    124357c83672564ce7ee1bc20ff82c262adae52f \
+                    rmd160  33f144b9ededaed2a8bbc150334e6c7c903a92ed
 patchfiles      patch-src_main.cpp.diff \
                 patch-src_Config.cpp.diff \
                 patch-src_wxMaxima.cpp.diff
@@ -29,6 +29,8 @@ post-patch {
     reinplace "s|@@PREFIX@@|${prefix}|" ${worksrcpath}/src/main.cpp
 }
 
+depends_skip_archcheck  maxima
+supported_archs         i386 ppc
 configure.args  --enable-dnd --enable-printing --enable-unicode-glyphs
 build.target-append wxMaxima.app
 
