nedi: Closes #22088.  Update to 1.0.5 to fix missing tarball.  Path cleanup.
git-svn-id: https://svn.macports.org/repository/macports/trunk@73174 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/nedi/Portfile
+++ b/dports/net/nedi/Portfile
@@ -3,8 +3,7 @@
 PortSystem	1.0
 
 name			nedi
-version			1.0
-revision		3
+version			1.0.5
 categories		net
 maintainers		markd
 platforms		darwin
@@ -15,12 +14,11 @@ long_description	A low noise network discovery, management, and inventory \
 			system for Cisco networks with a user friendly web interface.
 
 homepage		http://www.nedi.ch/
-master_sites	        http://nedi.web.psi.ch/
+master_sites	        http://www.nedi.ch/_media/files:
 
 extract.suffix		.tgz
 worksrcdir		${name}
-checksums		md5 adae0699ea6d010d6d92f807f04ca442
-patchfiles		patch-html-Reports-Modules.php-diff
+checksums		md5 6ed980228483addfdc5caf14430d7570
 
 depends_lib		path:bin/perl:perl5 \
 			path:bin/mysql_config5:mysql5 \
@@ -45,70 +43,69 @@ variant_set server
 
 
 # Set some useful variables
-set nedidir ${prefix}/share
+set nedidir ${prefix}/share/${name}
 set rrdbin ${prefix}/bin/rrdtool
-set rrdfiles ${nedidir}/${name}/rrd
+set rrdfiles ${nedidir}/rrd
 set fpingpath ${prefix}/sbin
 set cacticlidir ${prefix}/share/cacti/cli
 
 startupitem.create	yes
 startupitem.name	nedimonitor
-startupitem.executable	${nedidir}/${name}/moni.pl
+startupitem.executable	${nedidir}/moni.pl
 
 use_configure		no
 build {}
 
-post-patch {
-	eval reinplace "s|__PREFIX__|${prefix}|g" \
-		[glob ${filespath}/*]
-}
+#post-patch {
+#	eval reinplace "s|__PREFIX__|${prefix}|g" \
+#		[glob ${filespath}/*]
+#}
 
 destroot {
-	xinstall -m 755 -d ${destroot}${nedidir}
-	system "cp -R ${worksrcpath} ${destroot}${nedidir}"
+	file mkdir ${destroot}${nedidir}
+	system "cp -R ${worksrcpath}/* ${destroot}${nedidir}"
 }
 
 post-destroot {
 # Fix general paths
-       eval reinplace "s|/usr/bin/perl|${prefix}/bin/perl|g" \
-                [glob ${destroot}${nedidir}/${name}/*.pl] \
-		[glob ${destroot}${nedidir}/${name}/inc/*.pl] \
-                [glob ${destroot}${nedidir}/${name}/html/inc/*.pl]
+       eval reinplace "s|/usr/|${prefix}/|g" \
+                [glob ${destroot}${nedidir}/*.pl] \
+		[glob ${destroot}${nedidir}/inc/*.pl] \
+                [glob ${destroot}${nedidir}/html/inc/*.pl] \
+		[glob ${destroot}${nedidir}/contrib/*.pl]
 
 	reinplace "s|netstat|/usr/sbin/netstat|g" \
-                ${destroot}${nedidir}/${name}/inc/libmisc.pl
+                ${destroot}${nedidir}/inc/libmisc.pl
 
-        reinplace "s|/etc/nedi.conf|${nedidir}/nedi/nedi.conf|g" \
-                ${destroot}${nedidir}/${name}/html/inc/libmisc.php
+        reinplace "s|/etc/nedi.conf|${nedidir}/nedi.conf|g" \
+                ${destroot}${nedidir}/html/inc/libmisc.php
 
-# Fix rrdcmd and rrdpath variables in nedi.conf
+# Fix rrdcmd location in nedi.conf
 	reinplace "s|rrdtool|${rrdbin}|g" \
-                ${destroot}${nedidir}/${name}/nedi.conf
-	reinplace "s|/var/nedi/rrd|${rrdfiles}|g" \
-		${destroot}${nedidir}/${name}/nedi.conf
+                ${destroot}${nedidir}/nedi.conf
 
 # Fix fping path
 	reinplace "s|/usr/local/sbin|${fpingpath}|g" \
- 		${destroot}${nedidir}/${name}/html/Nodes-Toolbox.php
+ 		${destroot}${nedidir}/html/Nodes-Toolbox.php
 
 # Fix Cacti paths in nedi.conf
 	reinplace "s|/usr/bin/php /var/www/html/cacti/cli|${prefix}/bin/php ${cacticlidir}|g" \
-		${destroot}${nedidir}/${name}/nedi.conf
+		${destroot}${nedidir}/nedi.conf
 
 # Create directory for rrd files
         xinstall -m 755 -d ${destroot}${rrdfiles}
 
 # Keep these empty directories
         destroot.keepdirs \
-                ${destroot}${nedidir}/${name}/db/cfg \
-		${destroot}${nedidir}/${name}/html/log \
+                ${destroot}${nedidir}/db/cfg \
+		${destroot}${nedidir}/html/log \
 		${destroot}${rrdfiles}
 
 # Rename nedi.conf to nedi.conf.sample so port upgrades don't overwrite an installed nedi.conf
 # Also set permissions on nedi.conf because it has passwords.
-	file rename ${destroot}${nedidir}/${name}/nedi.conf \
-		${destroot}${nedidir}/${name}/nedi.conf.sample
-		system "chmod 600 ${destroot}${nedidir}/${name}/nedi.conf.sample"
+	file rename ${destroot}${nedidir}/nedi.conf \
+		${destroot}${nedidir}/nedi.conf.sample
+		system "chmod 600 ${destroot}${nedidir}/nedi.conf.sample"
 }
 
 pre-install {
@@ -172,9 +169,9 @@ ui_msg "\n#### To complete the NeDi OS X installation ####
 
 4) Configure NeDi, initialize database, and Login to NeDi
 -----------------------------------------------
--Set NeDi owner: sudo chown -R <nedi-user>:<nedi-group> ${nedidir}/${name}/
--Apache symlink: ln -s ${nedidir}/${name}/html/  ${prefix}/apache2/htdocs/nedi
--Edit nedi.conf Backend/Authen/Device Access sections: sudo pico ${nedidir}/${name}/nedi.conf
+-Set NeDi owner: sudo chown -R <nedi-user>:<nedi-group> ${nedidir}
+-Apache symlink: ln -s ${nedidir}/html/  ${prefix}/apache2/htdocs/nedi
+-Edit nedi.conf Backend/Authen/Device Access sections: sudo pico ${nedidir}/nedi.conf
 	Leave nedi.conf permissions at 600 to protect your network passwords!
 backend		MSQ
 dbpass		<nedidb-password>
@@ -184,7 +181,7 @@ comm <my-commnity-string> (community string of your Cisco devices)
 <usr> <pass> <enablepass> (user/pass of your Cisco devices)
 
 -Initialize the NeDi database:
-	cd ${nedidir}/${name}
+	cd ${nedidir}
 	sudo ./nedi.pl -i
 	When prompted for \"MySQL admin user:\" and enter 'root' and then MySQL root password.
 
@@ -204,7 +201,7 @@ comm <my-commnity-string> (community string of your Cisco devices)
 
 5) Discover Your Network with NeDi
 -----------------------------------------------
--Edit nedi.conf Device Acc. variables: sudo pico ${nedidir}/${name}/nedi.conf
+-Edit nedi.conf Device Acc. variables: sudo pico ${nedidir}/nedi.conf
 
 comm <my-community-string>
 <usr>  <pass>  <enablepass>
@@ -213,7 +210,7 @@ Optionally uncomment the 'cacticli' variable to create Cacti graphs within NeDi
 
 -Make any other desired changes in nedi.conf
 -Start NeDi data collection:
-	cd ${nedidir}/${name}
+	cd ${nedidir}
 	sudo -u <nedi-user> nedi.pl -c -d (debug)
 -Put a command in the crontab to discover your network at regular intervals.
 	A typical interval is 1 hour; to get accurate NeDi rrdtool graphs at
@@ -221,7 +218,7 @@ Optionally uncomment the 'cacticli' variable to create Cacti graphs within NeDi
 	Otherwise, you must adjust NeDi's default rrdtool settings.  To run
 	NeDi every hour, the cron entry is:
 
-0 * * * * cd ${nedidir}/${name} ; ./nedi.pl -c >> /dev/null 2>&1
+0 * * * * cd ${nedidir} ; ./nedi.pl -c >> /dev/null 2>&1
 
 
 6) Set NeDi to receive device alerts, syslogs, and SNMP traps.  (optional)
@@ -237,7 +234,7 @@ Optionally uncomment the 'cacticli' variable to create Cacti graphs within NeDi
 -To enable the NeDi SNMP trap receiver, first use the snmpconf Unix utility to create an
  snmptrapd.conf file with the entry:
 
-	traphandle      default ${nedidir}/${name}/trap.pl
+	traphandle      default ${nedidir}/trap.pl
 
  Then load the startup script to run the Unix snmptrapd daemon:
 
