nedi: Convert ui_msg to notes, remove dummy variant no longer needed, and removed a few commented lines.
git-svn-id: https://svn.macports.org/repository/macports/trunk@73175 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/nedi/Portfile
+++ b/dports/net/nedi/Portfile
@@ -4,6 +4,7 @@ PortSystem	1.0
 
 name			nedi
 version			1.0.5
+revision		1
 categories		net
 maintainers		markd
 platforms		darwin
@@ -33,14 +34,9 @@ depends_lib		path:bin/perl:perl5 \
 			port:rrdtool \
 			port:fping
 
-variant server description {does nothing in this port, but its presence triggers mysql5 server variant} {}
-
 variant cacti description {NeDi supports the Cacti API to selectively add graphs of NeDi discovered devices to a Cacti installation on the same host} {
 	depends_lib-append port:cacti
 }
-
-variant_set server
-
 
 # Set some useful variables
 set nedidir ${prefix}/share/${name}
@@ -55,11 +51,6 @@ startupitem.executable	${nedidir}/moni.pl
 
 use_configure		no
 build {}
-
-#post-patch {
-#	eval reinplace "s|__PREFIX__|${prefix}|g" \
-#		[glob ${filespath}/*]
-#}
 
 destroot {
 	file mkdir ${destroot}${nedidir}
@@ -125,9 +116,8 @@ pre-install {
 		${prefix}/etc/LaunchDaemons/org.macports.snmptrapd/org.macports.snmptrapd.plist"
 }
 
-post-activate {
-
-ui_msg "\n#### To complete the NeDi OS X installation ####
+notes \
+  "**** To complete the NeDi OS X installation ****
 
 
 1) Setup MySQL (for new installs)
@@ -238,6 +228,4 @@ Optionally uncomment the 'cacticli' variable to create Cacti graphs within NeDi
 
  Then load the startup script to run the Unix snmptrapd daemon:
 
-	sudo load lauchctl load -w /Library/LaunchDaemons/org.macports.snmptrapd.plist
-\n"
-}
+	sudo load lauchctl load -w /Library/LaunchDaemons/org.macports.snmptrapd.plist"
