nedi: Correct a path error set in nedi.conf.sample.
git-svn-id: https://svn.macports.org/repository/macports/trunk@73176 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/nedi/Portfile
+++ b/dports/net/nedi/Portfile
@@ -4,7 +4,7 @@ PortSystem	1.0
 
 name			nedi
 version			1.0.5
-revision		1
+revision		2
 categories		net
 maintainers		markd
 platforms		darwin
@@ -59,7 +59,7 @@ destroot {
 
 post-destroot {
 # Fix general paths
-       eval reinplace "s|/usr/|${prefix}/|g" \
+       eval reinplace "s|/usr/bin/perl|${prefix}/perl|g" \
                 [glob ${destroot}${nedidir}/*.pl] \
 		[glob ${destroot}${nedidir}/inc/*.pl] \
                 [glob ${destroot}${nedidir}/html/inc/*.pl] \
