--- a/dports/print/scribus/Portfile
+++ b/dports/print/scribus/Portfile
@@ -1,6 +1,7 @@
 # $Id$
 
 PortSystem      1.0
+PortGroup xcodeversion 1.0
 
 name            scribus
 version         1.3.3.11
@@ -43,9 +44,7 @@ use_parallel_build  yes
 
 #destroot.target    install-strip
 
-platform darwin 9 {
-    configure.ldflags-append    -Wl,-dylib_file,/System/Library/Frameworks/OpenGL.framework/Versions/A/Libraries/libGL.dylib:/System/Library/Frameworks/OpenGL.framework/Versions/A/Libraries/libGL.dylib
-}
+minimum_xcodeversions {9 3.1}
 
 livecheck.type  regex
 livecheck.url   ${homepage}
