couchdb: add configure args to aid finding some includes (#20123)
git-svn-id: https://svn.macports.org/repository/macports/trunk@73181 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/databases/couchdb/Portfile
+++ b/dports/databases/couchdb/Portfile
@@ -34,6 +34,9 @@ depends_lib	port:automake \
     port:curl \
     port:erlang
 
+configure.args   --with-js-include=${prefix}/include/js \
+                 --with-erlang=${prefix}/lib/erlang/usr/include
+
 # erlang is not universal
 universal_variant   no
 
