spin: Resolve issue #27061
git-svn-id: https://svn.macports.org/repository/macports/trunk@73186 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/spin/Portfile
+++ b/dports/devel/spin/Portfile
@@ -6,6 +6,7 @@ PortSystem      1.0
 name            spin
 version         5.2.5
 set version_no_dot [join [split ${version} .] ""]
+revision        1
 distname        ${name}${version_no_dot}
 categories      devel
 platforms       darwin
@@ -23,7 +24,8 @@ checksums           md5     03345f9713e7b4f82d2d8ec319802b9c \
                     sha1    274649628c0c8ae3414b863c27a1b8d98a8e9921 \
                     rmd160  8d01f8dd0da8c8013fbb8c6d6e9a8c40b8c5f33f
 depends_lib     port:tk port:tcl
-patchfiles      patch-xspin.diff
+patchfiles      patch-xspin.diff \
+                patch-makefile.diff
 worksrcdir      Spin/Src${version}
 use_configure   no
 use_parallel_build no
@@ -40,7 +42,6 @@ post-patch  {
 }
 
 build.target    ""
-build.args      CC="${configure.cc} -DNXT" CFLAGS="${configure.cflags} -ansi -D_POSIX_SOURCE -Wno-format-security"
 
 destroot    {
     xinstall -m 0444 ${worksrcpath}/../Man/${name}.1 \
