--- a/dports/devel/spin/Portfile
+++ b/dports/devel/spin/Portfile
@@ -24,8 +24,7 @@ checksums           md5     03345f9713e7b4f82d2d8ec319802b9c \
                     sha1    274649628c0c8ae3414b863c27a1b8d98a8e9921 \
                     rmd160  8d01f8dd0da8c8013fbb8c6d6e9a8c40b8c5f33f
 depends_lib     port:tk port:tcl
-patchfiles      patch-xspin.diff \
-                patch-makefile.diff
+patchfiles      patch-xspin.diff
 worksrcdir      Spin/Src${version}
 use_configure   no
 use_parallel_build no
@@ -42,6 +41,8 @@ post-patch  {
 }
 
 build.target    ""
+build.args      CC="${configure.cc} -DNXT" \
+                CFLAGS='${configure.cflags} -ansi -D_POSIX_SOURCE -Wno-format-security -DMAC -DCPP=\"\\\"gcc -E -x c -xassembler-with-cpp\\""'
 
 destroot    {
     xinstall -m 0444 ${worksrcpath}/../Man/${name}.1 \
