net-snmp: install as root
git-svn-id: https://svn.macports.org/repository/macports/trunk@73191 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/net-snmp/Portfile
+++ b/dports/net/net-snmp/Portfile
@@ -93,6 +93,8 @@ post-destroot {
     }
 }
 
+install.asroot          yes
+
 livecheck.type          regex
 livecheck.url           ${homepage}download.html
 livecheck.regex         {Current release: ([0-9.]+)}
