xinit: install as root
git-svn-id: https://svn.macports.org/repository/macports/trunk@73193 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/xinit/Portfile
+++ b/dports/x11/xinit/Portfile
@@ -46,3 +46,5 @@ post-destroot {
 		[glob ${destroot}${prefix}/lib/X11/xinit/xinitrc.d/*.sh] \
 		${destroot}${prefix}/bin/font_cache
 }
+
+install.asroot      yes
