PlasmaClient: update to 0.0.2 347 libhsplasma: update to 756
git-svn-id: https://svn.macports.org/repository/macports/trunk@73195 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/PlasmaClient/Portfile
+++ b/dports/games/PlasmaClient/Portfile
@@ -6,7 +6,7 @@ PortGroup                   cmake 1.0
 
 name                        PlasmaClient
 epoch                       1
-version                     0.0.1-275
+version                     0.0.2-347
 categories                  games
 platforms                   darwin
 maintainers                 ryandesign
@@ -23,7 +23,7 @@ long_description            ${name} is an open-source cross-platform \
 
 fetch.type                  hg
 hg.url                      http://uru.zrax.net/hg/plasmaclient
-hg.tag                      8e9a3e21306d
+hg.tag                      f2cc2d63b0fa
 
 depends_lib                 port:bullet \
                             port:python26 \
@@ -63,11 +63,14 @@ configure.args              -DBULLET_INCLUDE_DIR:PATH=${prefix}/include/bullet \
                             -DSDL_INCLUDE_DIR=${prefix}/include/SDL \
                             -DSDL_LIBRARY="${prefix}/lib/libSDLmain.a\;${prefix}/lib/libSDL.dylib\;-framework Cocoa"
 
+build.target-append         default_ini
+
 destroot.keepdirs           ${destroot}${prefix}/var/log/${name}
 
 set docdir ${prefix}/share/doc/${name}
 post-destroot {
-    xinstall -d ${destroot}${prefix}/share/mystonline/data
+    xinstall -d ${destroot}${prefix}/share/mystonline/data/servers
+    xinstall -W ${worksrcpath} default.ini ${destroot}${prefix}/share/mystonline/data/servers
     xinstall -W ${worksrcpath}/win32dist global.wpm ${destroot}${prefix}/share/mystonline/data
     
     xinstall -d ${destroot}${docdir}
@@ -90,6 +93,10 @@ platform darwin powerpc {
 
 platform darwin 8 {
     configure.ldflags-append -lcrypto -ljpeg -lz
+}
+
+variant chatlog description {Log all chat messages to /tmp/pcchat.log} {
+    patchfiles-append patch-chatlog.diff
 }
 
 if {[variant_isset debug]} {
