--- a/dports/devel/libhsplasma/Portfile
+++ b/dports/devel/libhsplasma/Portfile
@@ -5,7 +5,7 @@ PortSystem                  1.0
 PortGroup                   cmake 1.0
 
 name                        libhsplasma
-version                     0.0-722
+version                     0.0-756
 categories                  devel
 platforms                   darwin
 maintainers                 ryandesign
@@ -21,14 +21,15 @@ long_description            libHSPlasma is a library for reading files used \
 
 fetch.type                  hg
 hg.url                      http://uru.zrax.net/hg/libhsplasma
-hg.tag                      ab04914fbe8a
+hg.tag                      52fcdb1e4dfd
 
 depends_lib                 port:zlib \
                             port:jpeg \
                             port:openssl \
                             port:python26
 
-patchfiles                  patch-endian.diff
+# half of patch-endian doesn't apply anymore following rewritten upstream net code
+#patchfiles                  patch-endian.diff
 
 configure.args-append       -DDISABLE_PYTHON:BOOL=OFF \
                             -DPYTHON_EXECUTABLE:FILEPATH=${prefix}/bin/python2.6 \
