lastmp: fix patch phase failure due to working directory assumption (#27175)
git-svn-id: https://svn.macports.org/repository/macports/trunk@73197 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/lastmp/Portfile
+++ b/dports/audio/lastmp/Portfile
@@ -34,8 +34,8 @@ post-extract {
 patchfiles      patch-setup.py.diff \
                 patch-lastmp.1.diff
 post-patch {
-    reinplace "s|@PREFIX@|${prefix}|" doc/lastmp.1
-    reinplace "s|@PREFIX@|${prefix}|" ${conf}
+    reinplace "s|@PREFIX@|${prefix}|" ${worksrcpath}/doc/lastmp.1 \
+                                      ${worksrcpath}/${conf}
 }
 
 post-destroot {
