magicpoint: revert part of r50572 that broke configure (#27174), disable parallel build since it fails for me
git-svn-id: https://svn.macports.org/repository/macports/trunk@73198 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/magicpoint/Portfile
+++ b/dports/graphics/magicpoint/Portfile
@@ -29,6 +29,8 @@ depends_lib	port:Xft2 \
 
 universal_variant no
 
+# LOCALPREFIX= is for configure to find libungif.
+configure.env	LOCALPREFIX=${prefix}
 configure.args	--enable-gif --mandir=${prefix}/share/man
 
 post-configure {
@@ -38,6 +40,7 @@ post-configure {
 
 destroot.target	install install.man
 
+use_parallel_build no
 build.args-append \
 	EXTRA_LIBRARIES=-L${prefix}/lib
 
