set supported_archs in ports depending on mono
git-svn-id: https://svn.macports.org/repository/macports/trunk@73202 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/taglib-sharp/Portfile
+++ b/dports/audio/taglib-sharp/Portfile
@@ -6,6 +6,8 @@ name                taglib-sharp
 version             2.0.3.0
 categories          audio
 platforms           darwin
+# mono is currently 32-bit only
+supported_archs     i386 ppc
 maintainers         nomaintainer
 description         C# implementation of TagLib.
 long_description    ${description} TagLib is a library for reading and \
