--- a/dports/devel/mono-basic/Portfile
+++ b/dports/devel/mono-basic/Portfile
@@ -6,6 +6,8 @@ name                mono-basic
 version             2.4.2
 categories          devel lang mono
 platforms           darwin
+# mono is currently 32-bit only
+supported_archs     i386 ppc
 maintainers         mww
 description         Visual Basic .NET compiler for mono
 long_description    ${description}
