--- a/dports/devel/cocoa-sharp/Portfile
+++ b/dports/devel/cocoa-sharp/Portfile
@@ -5,6 +5,8 @@ name		cocoa-sharp
 version		0.2
 categories	devel
 platforms	macosx
+# mono is currently 32-bit only
+supported_archs i386 ppc
 maintainers	nomaintainer
 description	Cocoa bindings for the Mono .NET Development Framework
 long_description	These are Cocoa bindings for Mono, which is an \
