--- a/dports/devel/xsp/Portfile
+++ b/dports/devel/xsp/Portfile
@@ -6,6 +6,8 @@ name		xsp
 version		1.1.16.1
 categories	devel www mono
 platforms	darwin
+# mono is currently 32-bit only
+supported_archs i386 ppc
 maintainers	nomaintainer
 description	a small web server that hosts the Mono System.Web classes
 long_description	The XSP server is a small web server that hosts the Mono System.Web classes for running what is commonly known as ASP.NET
@@ -15,4 +17,3 @@ master_sites	${homepage}sources/xsp/
 checksums	md5 ae8d88fe86c55f185d41f8753f776eb7
 depends_lib	port:mono
 configure.args	--mandir=${prefix}/share/man --infodir=${prefix}/share/info
-
