--- a/dports/gnome/gnome-sharp2/Portfile
+++ b/dports/gnome/gnome-sharp2/Portfile
@@ -9,6 +9,8 @@ version         2.20.0
 revision        1
 categories      gnome devel
 platforms       darwin
+# mono is currently 32-bit only
+supported_archs i386 ppc
 maintainers     nomaintainer
 description     Gtk bindings for the Mono .NET Development Framework
 
