--- a/dports/gnome/gtksourceview-sharp2/Portfile
+++ b/dports/gnome/gtksourceview-sharp2/Portfile
@@ -9,6 +9,8 @@ version         0.12
 categories      gnome devel
 maintainers     nomaintainer
 platforms       darwin
+# mono is currently 32-bit only
+supported_archs i386 ppc
 description     C# Bindings for GtkSourceView.
 
 long_description \
