--- a/dports/www/mod_mono/Portfile
+++ b/dports/www/mod_mono/Portfile
@@ -5,6 +5,8 @@ name		mod_mono
 version		1.1.16.1
 categories	www mono
 platforms	darwin
+# mono is currently 32-bit only
+supported_archs i386 ppc
 maintainers	nomaintainer
 description	an Apache plug-in for hosting the Mono System.Web classes
 long_description	An Apache web server plug-in that hosts the Mono System.Web classes for running what is commonly known as ASP.NET
