--- a/dports/x11/gtk-sharp2/Portfile
+++ b/dports/x11/gtk-sharp2/Portfile
@@ -9,6 +9,8 @@ version         2.12.9
 set branch      [join [lrange [split ${version} .] 0 1] ""]
 categories      x11 devel
 platforms       darwin
+# mono is currently 32-bit only
+supported_archs i386 ppc
 maintainers     nomaintainer
 description     Gtk bindings for the Mono .NET Development Framework
 
