tiemu3: fixed an error with a now obsolete GTK symbol, closes #27100, split a single patch into different files
git-svn-id: https://svn.macports.org/repository/macports/trunk@73203 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/math/tiemu3/Portfile
+++ b/dports/math/tiemu3/Portfile
@@ -35,10 +35,21 @@ depends_lib         port:libiconv \
                     port:libglade2 \
                     port:libsdl
 
-patchfiles			patch-keynames-c.diff \
-                    patch-tiemu3.diff
+patchfiles			patch-calc.diff \
+                    patch-dbg_all.diff \
+                    patch-dbg_bkpts.diff \
+                    patch-dbg_code.diff \
+                    patch-dbg_dock.diff \
+                    patch-dbg_heap.diff \
+                    patch-dbg_iop.diff \
+                    patch-dbg_mem.diff \
+                    patch-dbg_pclog.diff \
+                    patch-dbg_regs.diff \
+                    patch-dbg_stack.diff \
+                    patch-dbg_wnds.diff \
+                    patch-keynames.diff \
+                    patch-screen.diff
 
-patch.pre_args      -p1
 
 configure.args-append		--without-kde --disable-debugger --disable-gdb
 
