postgresql-devel, postgresql-server-devel: replaced by postgresql91 and postgresql91-server, respectively; see #21076
git-svn-id: https://svn.macports.org/repository/macports/trunk@73205 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/databases/postgresql-server-devel/Portfile
+++ b/dports/databases/postgresql-server-devel/Portfile
@@ -3,7 +3,7 @@
 PortSystem 1.0
 
 name			postgresql-server-devel
-version                 20090613	
+version			9.1alpha
 categories		databases
 platforms		darwin
 maintainers		gmail.com:chepra
@@ -11,46 +11,13 @@ description		run postgresql-devel as server
 long_description	${description}
 
 homepage		http://www.postgresql.org/
-master_sites		postgresql
+distfiles
 
-depends_run		port:postgresql-devel
+replaced_by		postgresql91-server
 
-fetch	{}
-checksum	{}
-extract	{}
-use_configure	no
-build	{}
-
-set libdir		${prefix}/lib/postgresql-devel
-set dbdir		${prefix}/var/db/postgresql-devel/defaultdb
-set logdir		${prefix}/var/log/postgresql-devel
-set dbuser		postgres
-set dbgrp		postgres
-
-startupitem.create	yes
-startupitem.init	\
-	"PGCTL=${libdir}/bin/pg_ctl"
-startupitem.start	\
-	"su ${dbuser} -c \"\${PGCTL} -D \${POSTGRESQLDEVELDATA:=${dbdir}} start -l ${logdir}/postgres.log\""
-startupitem.stop	\
-"su ${dbuser} -c \"\${PGCTL} -D \${POSTGRESQLDEVELDATA:=${dbdir}} stop -s -m fast\""
-
-destroot {
-	addgroup ${dbgrp}
-	set gid [existsgroup ${dbgrp}]
-	adduser ${dbuser} shell=/bin/sh gid=${gid} \
-		home=${prefix}/var/db/postgresql-devel \
-		realname=PostgreSQL-devel\ Server
-	xinstall -m 755 -d ${destroot}${logdir}
-	system "touch ${destroot}${logdir}/postgres.log"
-	system "chown ${dbuser}:${dbgrp} ${destroot}${logdir}/postgres.log"
+pre-configure {
+	ui_error "${name} has been replaced by ${replaced_by}; please install that port instead"
+	return -code error "obsolete port"
 }
 
-post-install {
-	ui_msg "\nTo create a database instance, after install do\n\
-		sudo mkdir -p ${dbdir}\n\
-		sudo chown ${dbuser}:${dbgrp} ${dbdir}\n\
-		sudo su ${dbuser} -c \'${libdir}/bin/initdb -D ${dbdir}\'"
-	ui_msg "\nTo tweak your DBMS, consider increasing kern.sysv.shmmax\
-		by adding an increased kern.sysv.shmmax .. to /etc/sysctl.conf"
-}
+livecheck.type	none
