--- a/dports/databases/postgresql-devel/Portfile
+++ b/dports/databases/postgresql-devel/Portfile
@@ -3,8 +3,7 @@
 PortSystem 1.0
 
 name			postgresql-devel
-version		        20090613	
-revision        1
+version			9.1alpha
 maintainers		gmail.com:chepra
 categories		databases
 platforms		darwin
@@ -16,90 +15,13 @@ long_description PostgreSQL is Object-Relational Database Management System. \
 				integrity.
 
 homepage		http://www.postgresql.org/
-distname		pgsql
+distfiles
 
-fetch.type		cvs
-cvs.root		:pserver:anoncvs@anoncvs.postgresql.org:/projects/cvsroot
-cvs.password		macportrules
-cvs.date                "[string range $version 0 3]-[string range $version 4 5]-[string range $version 6 7]"
+replaced_by		postgresql91
 
-depends_lib		port:readline port:openssl port:zlib port:libxml2 port:libxslt port:ossp-uuid
-depends_build	        port:bison
-
-worksrcdir		${distname}
-
-set libdir		${prefix}/lib/${name}
-configure.args	--sysconfdir=${prefix}/etc/${name} \
-				--bindir=${libdir}/bin \
-				--libdir=${libdir} \
-				--includedir=${prefix}/include/${name} \
-				--datadir=${prefix}/share/${name} \
-				--mandir=${prefix}/share/man \
-				--without-docdir \
-				--with-includes=${prefix}/include \
-				--with-libraries=${prefix}/lib \
-				--with-openssl \
-				--with-bonjour \
-				--with-readline \
-				--with-zlib \
-				--with-libxml \
-				--with-libxslt \
-				--enable-thread-safety \
-				--enable-integer-datetimes \
-				--with-ossp-uuid
-configure.cppflags-append	-I${prefix}/include/ossp
-
-build.type		gnu
-build.target
-
-test.run		yes
-test.target		check
-
-livecheck.type	regex
-livecheck.url	${homepage}
-livecheck.regex	(8.4.\[0-9\]+)
-
-set contribs	"adminpack dblink fuzzystrmatch lo uuid-ossp pg_buffercache pg_trgm pgcrypto tsearch2 vacuumlo xml2"
-
-post-build {
-	foreach contrib ${contribs} {
-		system "cd ${worksrcpath}/contrib/${contrib}/ && ${build.cmd}"
-	}
+pre-configure {
+	ui_error "${name} has been replaced by ${replaced_by}; please install that port instead"
+	return -code error "obsolete port"
 }
 
-post-destroot {
-	foreach contrib ${contribs} {
-		system "echo contrib: \"${contrib}\""
-		system "cd ${worksrcpath}/contrib/${contrib}/ && \
-			${destroot.cmd} install ${destroot.destdir} && touch DONE"
-	}
-	system "cd ${destroot}${prefix}/bin && ln -sf ${libdir}/bin/psql psql-devel"
-	file delete -force ${destroot}${prefix}/share/doc/${name} \
-		${destroot}${prefix}/share/man
-}
-
-variant python description {add support for python} {
-	depends_lib-append		port:python25
-	configure.args-append	--with-python
-	configure.env-append	PYTHON=${prefix}/bin/python2.5
-}
-
-variant krb5 description {add support for Kerberos 5 authentication} {
-	configure.args-append	--with-krb5
-}
-
-variant perl description {add Perl support} {
-	depends_lib-append			bin:perl:perl5
-	configure.args-append		--with-perl
-}
-
-variant tcl description {add Tcl support} {
-	depends_lib-append			port:tcl
-	configure.args-append		--with-tcl --with-tclconfig=${prefix}/lib
-	configure.env-append		TCLSH=${prefix}/bin/tclsh
-}
-
-post-install {
-	ui_msg "\nTo use the postgresql server, install the postgresql-server-devel port"
-}
-
+livecheck.type	none
