--- a/dports/sysutils/clpbar/Portfile
+++ b/dports/sysutils/clpbar/Portfile
@@ -3,7 +3,7 @@
 PortSystem 1.0
 
 name			clpbar
-version			1.10.9
+version			1.11.0
 categories		sysutils
 platforms		darwin
 maintainers		nomaintainer
@@ -19,9 +19,9 @@ homepage		http://clpbar.sourceforge.net/
 master_sites	sourceforge
 distname		bar_${version}
 worksrcdir      bar-${version}
-checksums		md5 d824415b391a3f826b410c86223e54a5 \
-				sha1 324d5e199f07e8d299253a8748a5aec9a6381315 \
-				rmd160 e9bdd6a6b1d905f0bd47e53bc66b27177faf7973
+
+checksums       sha1    9685c0bd9a95bf149576c7edc8818266e471b15c \
+                rmd160  d22cff55daa93ac3673b8edb7d7106eb9cbe8b36
 
 universal_variant	no
 
@@ -30,4 +30,6 @@ configure.args	--mandir=${prefix}/share/man
 test.run        yes
 test.target     check
 
-livecheck.regex (?i)<title>${name} bar-(.*) released.*</title>
+livecheck.type  regex
+livecheck.url   http://sourceforge.net/projects/${name}/files
+livecheck.regex /bar_(\[0-9.\]+)${extract.suffix}
