--- a/dports/perl/p5-timedate/Portfile
+++ b/dports/perl/p5-timedate/Portfile
@@ -3,20 +3,22 @@
 PortSystem          1.0
 PortGroup           perl5 1.0
 
-perl5.setup         TimeDate 1.16 Date
+perl5.setup         TimeDate 1.20 ../../authors/id/G/GB/GBARR
 platforms           darwin
-maintainers         nomaintainer
+maintainers         maintainers         l2g.to:larry+macports
+license             Artistic/GPL
 supported_archs     noarch
 
-description         time and date parsing routines
+description         Time and date parsing routines
 
-long_description    This module replaces my earlier GetDate module, \
-                    which was only a date parser. The date parser \
-                    contained in this distribution is far superior to \
-                    the yacc based parser, and a *lot* faster. \
-                    The parser contained here will only parse absolute \
-                    dates, if you want a date parser that can parse \
-                    relative dates then take a look at the Time modules \
-                    by David Muir on CPAN.
+long_description    This module replaces Graham Barr\'s earlier GetDate \
+                    module, which was only a date parser. The date parser \
+                    contained in this distribution is far superior to the \
+                    yacc based parser, and a *lot* faster.  The parser \
+                    contained here will only parse absolute dates\; if you \
+                    want a date parser that can parse relative dates then \
+                    take a look at the Time modules by David Muir Sharnoff \
+                    on CPAN (p5-time-modules in MacPorts).
 
-checksums           md5     b3cc35a7cabd106ac8829d2f2ff4bd9d
+checksums           sha1    6394cd243e05c3c2073fa73348a4ad90d8d5963e \
+                    rmd160  513094a2d2fb3678c1ad893abc28c94d344ec7b8
