--- a/dports/net/naim/Portfile
+++ b/dports/net/naim/Portfile
@@ -2,7 +2,7 @@
 
 PortSystem 1.0
 name             naim
-version          0.11.8.2.1
+version          0.11.8.3.2
 categories       net
 maintainers      nomaintainer
 description      ncurses-based client for multiple messenger systems.
@@ -13,8 +13,9 @@ homepage         http://site.n.ml.org/info/naim/
 platforms        darwin
 use_bzip2        yes
 master_sites     http://naim.googlecode.com/files/
-checksums        md5 0f47e1927c00ed89cbce6d77486d884a \
-                 sha1 820f8f92b1dc26a69f7af0a4646cc83fdcdabf94 \
-                 rmd160 2bdbb0a08d7b999bfc80656fa203ba1be9a3ffed
+
+checksums        sha1    e2ddfcbf66b6139a68155cae0dddd1ac79d6c713 \
+                 rmd160  5d9f88c99ad78d30defe09c0f3b62c6217e8ed27
+
 test.run         yes
 test.target      check
