--- a/dports/sysutils/srm/Portfile
+++ b/dports/sysutils/srm/Portfile
@@ -3,7 +3,7 @@
 PortSystem 1.0
 
 name            srm
-version         1.2.8
+version         1.2.10
 description     srm is a secure replacement for rm(1).
 long_description \
     srm is a secure replacement for rm(1). Unlike the standard rm, it   \
@@ -19,6 +19,12 @@ categories      sysutils
 platforms       darwin
 homepage        http://srm.sourceforge.net/
 master_sites    sourceforge
-checksums       md5 66ba49b1864a7c69763210dbc3efee33
-configure.args  --mandir=${prefix}/share/man
-configure.cppflags-append   "-L${prefix}/lib"
+
+checksums       sha1    ef67e6a1abb1823b864de0a560487e6985f65815 \
+                rmd160  bf75458bd356287b0bc293ac61417429496828e7
+
+patchfiles      patch-configure.diff
+
+livecheck.type  regex
+livecheck.url   http://sourceforge.net/projects/${name}/files/
+livecheck.regex /${name}-(\[0-9.\]+)${extract.suffix}
