aamath:  * try to handle missing ncurses dependency    (it now links against macports--in addition    to the system ncurses)  * more comprehensive patch/reinplace
git-svn-id: https://svn.macports.org/repository/macports/trunk@73214 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/math/aamath/Portfile
+++ b/dports/math/aamath/Portfile
@@ -5,7 +5,7 @@ PortSystem          1.0
 
 name                aamath
 version             0.3
-revision            1
+revision            2
 categories          math textproc
 platforms           darwin
 license             GPLv2
@@ -20,16 +20,26 @@ homepage            http://fuse.superglue.se/aamath/
 master_sites        ${homepage}
 checksums           md5 f0e835bd06069b1bdaddd9e9c3447c12
 
-depends_lib         port:readline
-
-patchfiles          patch-Makefile.diff
+depends_build       port:byacc port:flex
+depends_lib         port:readline port:ncurses
 
 worksrcdir          aamath
 
+configure.cppflags-append -I/opt/local/include/ncurses
+configure.ldflags-append -lreadline -ltermcap -lncurses
+
+patchfiles          patch-Makefile.diff
+post-patch {
+    reinplace s|@@CXX@@|${configure.cxx}|g ${worksrcpath}/Makefile
+    reinplace s|@@LDFLAGS@@|${configure.ldflags}|g ${worksrcpath}/Makefile
+    reinplace "s|@@CFLAGS@@|${configure.cflags} ${configure.cppflags}|g" ${worksrcpath}/Makefile
+}
+
 use_configure       no
 
+build.args  VERBOSE=1
 # Override these values in the Makefile.
-build.args          CXX=${configure.cxx} \
+build.args          VERBOSE=1 CXX=${configure.cxx} \
                     LD=${configure.cxx}
 # The Makefile appends to these values.
 build.env           CFLAGS="${configure.cppflags} ${configure.cxxflags}" \
